# temporary-langchain-demo

./: README.md  main.py  pyproject.toml  rag_helpers.py
docs/: langchain.md
documents/: pasvalys.txt
vector_store/: index.faiss  index.pkl
